# dev-env-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: coverage.yml  documentation.yml
cmake/modules/: Package.cmake
cmake/toolchain/: gcc-coverage.cmake  llvm.cmake
dev/coverage/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
dev/documentation/: annotated.html  classLinux_1_1FileDescriptor-members.html  classLinux_1_1FileDescriptor.html  classes.html  dir_08d237fc27d4ecd563f71c5d52f2fecc.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  geometry__convex_8hpp.html  geometry__convex_8hpp_source.html  geometry__vector_8cpp.html  geometry__vector_8cpp_source.html  geometry__vector_8hpp.html  geometry__vector_8hpp__dep__incl.dot  geometry__vector_8hpp__incl.dot  geometry__vector_8hpp_source.html  geometry__vector__test_8cpp.html  geometry__vector__test_8cpp__incl.dot  geometry__vector__test_8cpp_source.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  index__coordinator_8cpp.html  index__coordinator_8cpp_source.html  index__coordinator_8hpp.html  index__coordinator_8hpp__dep__incl.dot  index__coordinator_8hpp_source.html  index__coordinator__fuzzer_8cpp.html  index__coordinator__fuzzer_8cpp_source.html  index__coordinator__test_8cpp.html  index__coordinator__test_8cpp__incl.dot  index__coordinator__test_8cpp_source.html  linux__executor_8c.html  linux__executor_8c__incl.dot  linux__executor_8c_source.html  linux__file__descriptor_8cpp.html  (+30 more)
geometry/coverage/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
geometry/documentation/: annotated.html  classSVG_1_1SvgBuilder-members.html  classSVG_1_1SvgBuilder.html  classes.html  dir_0275b9e11eb5ba6e6c628a1a7393a099.html  dir_08d237fc27d4ecd563f71c5d52f2fecc.html  dir_4b5e9b98f141e53b8d9d7023f384e485.html  dir_a6f3d304ad53db9b854abda348cd5abb.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  geometry__fuzzer__convex_8cpp.html  geometry__fuzzer__convex_8cpp__incl.dot  geometry__fuzzer__convex_8cpp_source.html  geometry__line_8cpp.html  geometry__line_8cpp__incl.dot  geometry__line_8cpp_source.html  geometry__line_8hpp.html  geometry__line_8hpp__dep__incl.dot  geometry__line_8hpp__incl.dot  geometry__line_8hpp_source.html  geometry__line__test_8cpp.html  geometry__line__test_8cpp__incl.dot  geometry__line__test_8cpp_source.html  geometry__line__traits_8cpp.html  geometry__line__traits_8cpp__incl.dot  geometry__line__traits_8cpp_source.html  geometry__line__traits_8hpp.html  geometry__line__traits_8hpp__dep__incl.dot  geometry__line__traits_8hpp__incl.dot  geometry__line__traits_8hpp_source.html  geometry__line__traits__test_8cpp.html  geometry__line__traits__test_8cpp__incl.dot  geometry__line__traits__test_8cpp_source.html  geometry__point_8cpp.html  geometry__point_8cpp__incl.dot  (+169 more)
main/coverage/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
main/documentation/: annotated.html  classLinux_1_1FileDescriptor-members.html  classLinux_1_1FileDescriptor.html  classes.html  dir_08d237fc27d4ecd563f71c5d52f2fecc.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  geometry__convex_8hpp.html  geometry__convex_8hpp__incl.dot  geometry__convex_8hpp_source.html  geometry__vector_8cpp.html  geometry__vector_8cpp__incl.dot  geometry__vector_8cpp_source.html  geometry__vector_8hpp.html  geometry__vector_8hpp__dep__incl.dot  geometry__vector_8hpp_source.html  geometry__vector__test_8cpp.html  geometry__vector__test_8cpp_source.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  index__coordinator_8cpp.html  index__coordinator_8cpp__incl.dot  index__coordinator_8cpp_source.html  index__coordinator_8hpp.html  index__coordinator_8hpp__dep__incl.dot  index__coordinator_8hpp__incl.dot  index__coordinator_8hpp_source.html  index__coordinator__fuzzer_8cpp.html  index__coordinator__fuzzer_8cpp__incl.dot  index__coordinator__fuzzer_8cpp_source.html  index__coordinator__test_8cpp.html  index__coordinator__test_8cpp_source.html  linux__executor_8c.html  linux__executor_8c_source.html  (+38 more)
master/coverage/: index.html  (+3 more)
sources/: CMakeLists.txt  geometry_convex.hpp  geometry_line.hpp  geometry_line_traits.cpp  geometry_line_traits.hpp  geometry_line_traits_test.cpp  geometry_point_operations.hpp  geometry_point_operations_test.cpp  geometry_point_test.cpp  geometry_point_traits.hpp  geometry_point_traits_test.cpp  geometry_polygon_convex.cpp  geometry_polygon_convex.hpp  geometry_polygon_convex_test.cpp  geometry_segment.hpp  geometry_segment_test.cpp  geometry_segment_traits.cpp  geometry_segment_traits.hpp  geometry_value_sign.hpp  geometry_vector.cpp  geometry_vector.hpp  geometry_vector_test.cpp  index_coordinator.cpp  index_coordinator.hpp  index_coordinator_fuzzer.cpp  index_coordinator_test.cpp  linux_executor.c  linux_file_descriptor.cpp  linux_file_descriptor.hpp  linux_file_descriptor_test.cpp  math_power.cpp  math_power.hpp  math_power_app.cpp  math_power_test.cpp  power.hpp  power_app.cpp  power_test.cpp  svg_image.hpp
sources/geometry/: CMakeLists.txt  geometry_fuzzer_convex.cpp  geometry_line.cpp  geometry_line.hpp  geometry_line_test.cpp  geometry_line_traits_test.cpp  geometry_point.cpp  geometry_point.hpp  geometry_point_operations.cpp  geometry_point_operations_test.cpp  geometry_point_test.cpp  geometry_point_traits.cpp  geometry_point_traits.hpp  geometry_point_traits_test.cpp  geometry_polygon_convex_test.cpp  geometry_segment.cpp  geometry_segment.hpp  geometry_segment_test.cpp  geometry_segment_traits_test.cpp  geometry_value_sign.cpp  geometry_value_sign_test.cpp
sources/power/: CMakeLists.txt  power.hpp  power_app.cpp  power_test.cpp
sources/svg/: CMakeLists.txt  svg_image.cpp  svg_image.hpp  svg_image_testapp.cpp
(+287 files in other folders)
